[tool.poetry]
name = "iso8601"
version = "0.1.12"
description = "Simple module to parse ISO 8601 dates"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
Sphinx = "^3.2.1"
tox = "^3.20.0"
twine = "^3.2.0"
wheel = "^0.35.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
