[tool.poetry]
name = "iso8601"
version = "0.1.13"
description = "Simple module to parse ISO 8601 dates"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/micktwomey/pyiso8601"
repository = "https://github.com/micktwomey/pyiso8601"
documentation = "https://pyiso8601.readthedocs.io/en/latest/"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
]
include = ["README.rst", "LICENSE", "tox.ini", "pyproject.toml", "poetry.lock"]
python_requires = ">=2.7,<4.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
Sphinx = "^3.2.1"
tox = "^3.20.0"
twine = "^3.2.0"
wheel = "^0.35.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
